cmake_minimum_required(VERSION 4.3.4)
set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
message(STATUS "Building on ${CMAKE_BUILD_TYPE} mode...")
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    if(ALICE_STACK)
        math(EXPR ALICE_STACK_ALIGNED "(${ALICE_STACK} / 16384 + 1) * 16384")
    endif()
    set(CMAKE_OSX_ARCHITECTURES arm64)
    project(Alice VERSION 0.0.1 LANGUAGES CXX OBJCXX)
else()
    if(ALICE_STACK)
        math(EXPR ALICE_STACK_ALIGNED "(${ALICE_STACK} / 4096 + 1) * 4096")
    endif()
    project(Alice VERSION 0.0.1 LANGUAGES CXX)
endif()
if(MSVC)
    foreach(var CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE)
        string(REPLACE "/EHsc" "" ${var} "${${var}}")
    endforeach()
    foreach(var CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG)
        string(REPLACE "/MDd" "" ${var} "${${var}}")
    endforeach()
    foreach(var CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_RELEASE)
        string(REPLACE "/MD" "" ${var} "${${var}}")
    endforeach()
endif()
set(ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E create_symlink "${CMAKE_BINARY_DIR}/compile_commands.json" "${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json")
string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" ARCH_LOWER)
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E remove_directory "${CMAKE_BINARY_DIR}/Alice.app/Contents/Resources")
    find_library(foundation Foundation)
    if(NOT foundation)
        message(FATAL_ERROR "Foundation not found")
    endif()
    find_library(appkit AppKit)
    if(NOT appkit)
        message(FATAL_ERROR "AppKit not found")
    endif()
    find_library(quartzcore QuartzCore)
    if(NOT quartzcore)
        message(FATAL_ERROR "QuartzCore not found")
    endif()
    find_library(metal Metal)
    if(NOT metal)
        message(FATAL_ERROR "Metal not found")
    endif()
    set(ALICE_RESOURCES_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/Resources/macOS")
    set(ALICE_SHADERS_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/Shader/MSL")
    file(GLOB_RECURSE ALICE_MACOS_RESOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Resources/macOS/*")
    file(GLOB_RECURSE ALICE_METAL_SHADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Shader/MSL/**.metal")
    file(GLOB_RECURSE ALICE_OBJCPP_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Source/**.mm")
    foreach(ALICE_FILE ${ALICE_MACOS_RESOURCES})
        file(RELATIVE_PATH ALICE_RESOURCE "${ALICE_RESOURCES_FOLDER}" "${ALICE_FILE}")
        get_filename_component(ALICE_RESOURCE_FILE "${ALICE_RESOURCE}" DIRECTORY)
        set_source_files_properties("${ALICE_FILE}" PROPERTIES MACOSX_PACKAGE_LOCATION "Resources/${ALICE_RESOURCE_FILE}")
    endforeach()
    foreach(ALICE_FILE ${ALICE_METAL_SHADERS})
        file(RELATIVE_PATH ALICE_RESOURCE "${ALICE_SHADERS_FOLDER}" "${ALICE_FILE}")
        get_filename_component(ALICE_RESOURCE_FILE "${ALICE_RESOURCE}" DIRECTORY)
        set_source_files_properties("${ALICE_FILE}" PROPERTIES MACOSX_PACKAGE_LOCATION "Resources/Shaders/${ALICE_RESOURCE_FILE}")
    endforeach()
    add_executable(Alice MACOSX_BUNDLE ${ALICE_MACOS_RESOURCES} ${ALICE_METAL_SHADERS} ${ALICE_OBJCPP_SOURCES})
    set_target_properties(Alice PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist")
    target_link_libraries(Alice PRIVATE ${foundation} ${appkit} ${quartzcore} ${metal})
    target_compile_definitions(Alice PRIVATE alice_darwin=)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E remove_directory "${CMAKE_BINARY_DIR}/Resources")
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Resource/Windows" AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Resource/Windows")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Resource/Windows" "${CMAKE_BINARY_DIR}/Resources")
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Shader/HLSL" AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Shader/HLSL")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/Resources/Shaders")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Shader/HLSL" "${CMAKE_BINARY_DIR}/Resources/Shaders")
    endif()
    add_executable(Alice WIN32 "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/src/d3dx12/d3dx12_property_format_table.cpp")
    target_include_directories(Alice PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/include" "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/include/d3dx12" "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/include")
    if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/bin/x64/D3D12Core.dll" "${CMAKE_BINARY_DIR}")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/bin/x64/d3d12SDKLayers.dll" "${CMAKE_BINARY_DIR}")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/bin/x64/dxcompiler.dll" "${CMAKE_BINARY_DIR}")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/bin/x64/dxil.dll" "${CMAKE_BINARY_DIR}")
        target_link_directories(Alice PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/lib/x64")
    else()
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/bin/arm64/D3D12Core.dll" "${CMAKE_BINARY_DIR}")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/bin/arm64/d3d12SDKLayers.dll" "${CMAKE_BINARY_DIR}")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/bin/arm64/dxcompiler.dll" "${CMAKE_BINARY_DIR}")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/bin/arm64/dxil.dll" "${CMAKE_BINARY_DIR}")
        target_link_directories(Alice PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/lib/arm64")
    endif()
    target_link_libraries(Alice PRIVATE dxguid dxgi dxcompiler dxil d3d12)
    target_compile_definitions(Alice PRIVATE WIN32_LEAN_AND_MEAN= alice_windows=)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(VULKAN_PATH "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Vulkan")
    set(VULKAN_VERSION "1.4.341.1")
    if(NOT EXISTS "${VULKAN_PATH}/${VULKAN_VERSION}")
        include(FetchContent)
        FetchContent_Declare(VULKAN_DOWNLOAD URL "https://sdk.lunarg.com/sdk/download/${VULKAN_VERSION}/linux/vulkansdk-linux-x86_64-${VULKAN_VERSION}.tar.xz" SOURCE_DIR "${VULKAN_PATH}/${VULKAN_VERSION}")
        FetchContent_MakeAvailable(VULKAN_DOWNLOAD)
    endif()
    set(ENV{VULKAN_SDK} "${VULKAN_PATH}/${VULKAN_VERSION}/x86_64")
    find_package(Vulkan REQUIRED)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(WAYLAND REQUIRED IMPORTED_TARGET wayland-client)
    pkg_check_modules(WAYLAND_PROTOCOLS REQUIRED wayland-protocols)
    pkg_get_variable(WAYLAND_PROTOCOLS_DIR wayland-protocols pkgdatadir)
    find_program(WAYLAND_SCANNER wayland-scanner REQUIRED)
    set(WAYLAND_PROTO_OUT_DIR ${CMAKE_BINARY_DIR}/wayland-protocols)
    list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E make_directory "${WAYLAND_PROTO_OUT_DIR}")
    set(ALICE_WAYLAND_PROTOCOLS "")
    function(add_wayland_protocols)
        set(options)
        set(oneValueArgs)
        set(multiValueArgs XMLS)
        cmake_parse_arguments(ALICE_PROTO "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
        if(NOT ALICE_PROTO_XMLS)
            message(FATAL_ERROR "add_wayland_protocol: XMLS is required")
        endif()
        foreach(xml ${ALICE_PROTO_XMLS})
            set(PROTO_XML "${WAYLAND_PROTOCOLS_DIR}/stable/${xml}/${xml}.xml")
            set(GEN_H "${WAYLAND_PROTO_OUT_DIR}/${xml}-client-protocol.h")
            set(GEN_C "${WAYLAND_PROTO_OUT_DIR}/${xml}-client-protocol.c")
            list(APPEND ALICE_WAYLAND_PROTOCOLS ${GEN_C})
            set(ALICE_WAYLAND_PROTOCOLS "${ALICE_WAYLAND_PROTOCOLS}" PARENT_SCOPE)
            add_custom_command(OUTPUT ${GEN_H} ${GEN_C} COMMAND ${WAYLAND_SCANNER} client-header ${PROTO_XML} ${GEN_H} COMMAND ${WAYLAND_SCANNER} private-code ${PROTO_XML} ${GEN_C} DEPENDS ${PROTO_XML} VERBATIM)
        endforeach()
    endfunction()
    add_wayland_protocols(XMLS xdg-shell)
    list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E remove_directory "${CMAKE_BINARY_DIR}/Resources")
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Resource/Linux" AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Resource/Linux")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Resource/Linux" "${CMAKE_BINARY_DIR}/Resources")
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Shader/GLSL" AND IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Shader/GLSL")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/Resources/Shaders")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Shader/GLSL" "${CMAKE_BINARY_DIR}/Resources/Shaders")
    endif()
    add_executable(Alice)
    set(ALICE_VK_LAYER_PATH "${VULKAN_PATH}/${VULKAN_VERSION}/x86_64/share/vulkan/explicit_layer.d")
    target_compile_definitions(Alice PRIVATE ALICE_VK_PATH="${ALICE_VK_LAYER_PATH}")
    target_sources(Alice PRIVATE ${ALICE_WAYLAND_PROTOCOLS})
    target_include_directories(Alice PRIVATE ${WAYLAND_PROTO_OUT_DIR})
    target_link_libraries(Alice PRIVATE PkgConfig::WAYLAND Vulkan::Vulkan)
    target_compile_definitions(Alice PRIVATE alice_linux=)
else()
    message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}. Alice currently supports Windows, Linux, and macOS.")
endif()
if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
    target_compile_definitions(Alice PRIVATE alice_amd64=)
    if(ALICE_SSE4_2)
        target_compile_definitions(Alice PRIVATE alice_sse4_2=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:SSE4.2)
        endif()
    endif()
    if(ALICE_AVX)
        target_compile_definitions(Alice PRIVATE alice_avx=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:AVX)
        endif()
    endif()
    if(ALICE_AVX2)
        target_compile_definitions(Alice PRIVATE alice_avx2=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:AVX2)
        endif()
    endif()
    if(ALICE_AVX512)
        target_compile_definitions(Alice PRIVATE alice_avx512=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:AVX512)
        endif()
    endif()
    if(ALICE_AVX10_1)
        target_compile_definitions(Alice PRIVATE alice_avx10_1=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:AVX10.1)
        endif()
    endif()
    if(ALICE_AVX10_2)
        target_compile_definitions(Alice PRIVATE alice_avx10_2=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:AVX10.2)
        endif()
    endif()
    if(ALICE_APX)
        target_compile_definitions(Alice PRIVATE alice_apx=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /feature:APX)
        endif()
    endif()
elseif(ARCH_LOWER MATCHES "^(aarch64|arm64)$")
    target_compile_definitions(Alice PRIVATE alice_arm64=)
    if(ALICE_ARM8_1)
        target_compile_definitions(Alice PRIVATE alice_arm8_1=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.1)
        endif()
    endif()
    if(ALICE_ARM8_2)
        target_compile_definitions(Alice PRIVATE alice_arm8_2=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.2)
        endif()
    endif()
    if(ALICE_ARM8_3)
        target_compile_definitions(Alice PRIVATE alice_arm8_3=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.3)
        endif()
    endif()
    if(ALICE_ARM8_4)
        target_compile_definitions(Alice PRIVATE alice_arm8_4=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.4)
        endif()
    endif()
    if(ALICE_ARM8_5)
        target_compile_definitions(Alice PRIVATE alice_arm8_5=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.5)
        endif()
    endif()
    if(ALICE_ARM8_6)
        target_compile_definitions(Alice PRIVATE alice_arm8_6=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.6)
        endif()
    endif()
    if(ALICE_ARM8_7)
        target_compile_definitions(Alice PRIVATE alice_arm8_7=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.7)
        endif()
    endif()
    if(ALICE_ARM8_8)
        target_compile_definitions(Alice PRIVATE alice_arm8_8=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.8)
        endif()
    endif()
    if(ALICE_ARM8_9)
        target_compile_definitions(Alice PRIVATE alice_arm8_9=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv8.9)
        endif()
    endif()
    if(ALICE_ARM9_0)
        target_compile_definitions(Alice PRIVATE alice_arm9_0=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv9.0)
        endif()
    endif()
    if(ALICE_ARM9_1)
        target_compile_definitions(Alice PRIVATE alice_arm9_1=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv9.1)
        endif()
    endif()
    if(ALICE_ARM9_2)
        target_compile_definitions(Alice PRIVATE alice_arm9_2=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv9.2)
        endif()
    endif()
    if(ALICE_ARM9_3)
        target_compile_definitions(Alice PRIVATE alice_arm9_3=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv9.3)
        endif()
    endif()
    if(ALICE_ARM9_4)
        target_compile_definitions(Alice PRIVATE alice_arm9_4=)
        if(MSVC)
            target_compile_options(Alice PRIVATE /arch:armv9.4)
        endif()
    endif()
else()
    message(FATAL_ERROR "Unknown architecture: ${CMAKE_SYSTEM_PROCESSOR}. Alice only recognizes amd64 and arm64")
endif()
target_compile_definitions(Alice PRIVATE alice_major=0 alice_middle=0 alice_minor=1)
target_include_directories(Alice PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Source")
if(MSVC)
    target_compile_options(Alice PRIVATE /std:c++latest)
    if(ALICE_STACK)
        target_link_options(Alice PRIVATE "/F ${ALICE_STACK_ALIGNED}")
    endif()
else()
    target_compile_features(Alice PRIVATE cxx_std_26)
endif()
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    target_compile_options(Alice PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions -fabi-version=21 -faligned-new -fchar8_t -fconcepts -fcontracts -fcontracts-client-check=all -fcontracts-definition-check=off -fcoroutines -ffold-simple-inlines -fno-gnu-keywords -fnew-inheriting-ctors -fnew-ttp-matching -frange-for-ext-temps -freflection -fsized-deallocation -fstrict-enums -fstrong-eval-order -Wabi-tag -Wcomma-subscript -Wdangling-reference -Wdelete-non-virtual-dtor -Wdeprecated-copy -Wdeprecated-copy-dtor -Wdeprecated-literal-operator -Wdeprecated-variadic-comma-omission -Winvalid-constexpr -Wnoexcept-type -Wclass-memaccess -Wnon-virtual-dtor -Wregister -Wreorder -Wrange-loop-construct -Wredundant-tags -Wsfinae-incomplete=2 -Wstrict-null-sentinel)
    if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
        target_compile_definitions(Alice PRIVATE _UNICODE=)
        target_compile_options(Alice PRIVATE -municode)
    endif()
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    if(CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
        target_compile_options(Alice PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions -Wno-dollar-in-identifier-extension)
        if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
            target_compile_definitions(Alice PRIVATE _UNICODE=)
            target_compile_options(Alice PRIVATE -municode)
        endif()
    else()
        message(FATAL_ERROR "Unsupported Clang's front-end variant: ${CMAKE_CXX_COMPILER_FRONTEND_VARIANT}. Alice currently supports GNU Clang.")
    endif()
elseif(MSVC)
    target_compile_definitions(Alice PRIVATE _HAS_EXCEPTIONS=0)
    if(ALICE_SAFE_BUFFERS)
        target_compile_options(Alice PRIVATE /GS)
    endif()
    if(ALICE_SAFE_CONTROL_FLOW)
        target_compile_options(Alice PRIVATE /guard:cf)
        target_link_options(Alice PRIVATE /guard:cf /CETCOMPAT)
    endif()
    if(ALICE_SAFE_STACK)
        target_compile_options(Alice PRIVATE /presetPadding)
    endif()
    if(ALICE_SPECTRE)
        target_compile_options(Alice PRIVATE /Qspectre /Qspectre-load /Qspectre-load-cf)
    endif()
    target_compile_options(Alice PRIVATE /nologo /bigobj /utf-8 /Zc:preprocessor /W4 /WX /permissive- /GR- /EHs-c- /GA /GF /Gw /Gy /jumptablerdata /options:strict /MP /volatile:iso /Zc:__cplusplus /Zc:enumTypes /Zc:templateScope /Zc:throwingNew)
    target_link_options(Alice PRIVATE /NOLOGO /OPT:REF,ICF,LBR /INCREMENTAL:NO /WX)
else()
    message(FATAL_ERROR "Unsupported C++ compiler: ${CMAKE_CXX_COMPILER_ID}. Alice currently supports GNU GCC, GNU Clang, or MSVC.")
endif()
get_property(ALICE_MULTI GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if(ALICE_MULTI)
    target_compile_definitions(Alice PRIVATE $<$<CONFIG:Debug>:alice_debug=>)
    if(MSVC)
        if(ALICE_SAFE_STACK)
            target_compile_options(Alice PRIVATE $<$<CONFIG:Debug>:/RTC1>)
        endif()
        target_compile_options(Alice PRIVATE $<$<CONFIG:Debug>:/Zi /Od /MTd /Zf /ZH:SHA512> $<$<CONFIG:Release>:/GL /Ox /MT /Oi>)
        target_link_options(Alice PRIVATE $<$<CONFIG:Debug>:/DEBUG> $<$<CONFIG:Release>:/LTCG>)
    else()
        target_compile_options(Alice PRIVATE $<$<CONFIG:Debug>:-O0> $<$<CONFIG:Release>:-O3>)
        target_link_options(Alice PRIVATE $<$<CONFIG:Debug>:-g>)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(Alice PRIVATE $<$<CONFIG:Debug>:-g3 -ggdb3 -gdwarf-5> $<$<CONFIG:Release>:-flto=auto>)
            target_link_options(Alice PRIVATE $<$<CONFIG:Release>:-flto=auto>)
        else()
            target_compile_options(Alice PRIVATE $<$<CONFIG:Debug>:-g> $<$<CONFIG:Release>:-flto=full>)
            target_link_options(Alice PRIVATE $<$<CONFIG:Release>:-flto=full>)
        endif()
    endif()
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(Alice PRIVATE alice_debug=)
    if(MSVC)
        if(ALICE_SAFE_STACK)
            target_compile_options(Alice PRIVATE /RTC1)
        endif()
        target_compile_options(Alice PRIVATE /Zi /Od /MTd /Zf /ZH:SHA512)
        target_link_options(Alice PRIVATE /DEBUG)
    else()
        target_compile_options(Alice PRIVATE -O0)
        target_link_options(Alice PRIVATE -g)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(Alice PRIVATE -g3 -ggdb3 -gdwarf-5)
        else()
            target_compile_options(Alice PRIVATE -g)
        endif()
    endif()
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    if(MSVC)
        target_compile_options(Alice PRIVATE /GL /Ox /MT /Oi)
        target_link_options(Alice PRIVATE /LTCG)
    else()
        target_compile_options(Alice PRIVATE -O3)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(Alice PRIVATE -flto=auto)
            target_link_options(Alice PRIVATE -flto=auto)
        else()
            target_compile_options(Alice PRIVATE -flto=full)
            target_link_options(Alice PRIVATE -flto=full)
        endif()
    endif()
else()
    message(FATAL_ERROR "Unsupported configuration. Alice currently supports Debug and Release.")
endif()
file(GLOB_RECURSE ALICE_EDITOR_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Editor/*.cpp")
file(GLOB_RECURSE ALICE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp")
target_sources(Alice PRIVATE ${ALICE_EDITOR_SOURCES} ${ALICE_SOURCES})
get_filename_component(ALICE_MAIN "${CMAKE_CURRENT_SOURCE_DIR}/Source/Alice.cpp" ABSOLUTE)
list(REMOVE_ITEM ALICE_SOURCES "${ALICE_MAIN}")
file(GLOB_RECURSE ALICE_TESTS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Test/*.cpp")
get_filename_component(ALICE_TEST_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Test" ABSOLUTE)
set(ALICE_TESTING "")
enable_testing()
foreach(ALICE_TEST_FILE ${ALICE_TESTS})
    file(RELATIVE_PATH REL_PATH ${ALICE_TEST_PATH} "${ALICE_TEST_FILE}")
    string(REPLACE "/" "_" TARGET_NAME "${REL_PATH}")
    string(REPLACE "." "_" TARGET_NAME "${TARGET_NAME}")
    set(ALICE_TEST_NAME "ALICE_TEST_${TARGET_NAME}")
    if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
        list(APPEND ALICE_CLEAN COMMAND ${CMAKE_COMMAND} -E remove_directory "${CMAKE_BINARY_DIR}/${ALICE_TEST_NAME}.app/Contents/Resources")
        add_executable(${ALICE_TEST_NAME} MACOSX_BUNDLE ${ALICE_MACOS_RESOURCES} ${ALICE_METAL_SHADERS} ${ALICE_OBJCPP_SOURCES} ${ALICE_SOURCES} ${ALICE_TEST_FILE})
        set_target_properties(${ALICE_TEST_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist")
        target_link_libraries(${ALICE_TEST_NAME} PRIVATE ${foundation} ${appkit} ${quartzcore} ${metal})
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_darwin=)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
        add_executable(${ALICE_TEST_NAME} WIN32 ${ALICE_SOURCES} ${ALICE_TEST_FILE} "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/src/d3dx12/d3dx12_property_format_table.cpp")
        target_include_directories(${ALICE_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/include" "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Agility/include/d3dx12" "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/include")
        if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
            target_link_directories(${ALICE_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/lib/x64")
        else()
            target_link_directories(${ALICE_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/DXC/lib/arm64")
        endif()
        target_link_libraries(${ALICE_TEST_NAME} PRIVATE dxguid dxgi dxcompiler dxil d3d12)
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE WIN32_LEAN_AND_MEAN= alice_windows=)
    else()
        add_executable(${ALICE_TEST_NAME} ${ALICE_SOURCES} ${ALICE_TEST_FILE} ${ALICE_WAYLAND_PROTOCOLS})
        target_include_directories(${ALICE_TEST_NAME} PRIVATE ${WAYLAND_PROTO_OUT_DIR})
        target_link_libraries(${ALICE_TEST_NAME} PRIVATE PkgConfig::WAYLAND Vulkan::Vulkan)
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_linux=)
    endif()
    if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_amd64=)
        if(ALICE_SSE4_2)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_sse4_2=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:SSE4.2)
            endif()
        endif()
        if(ALICE_AVX)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_avx=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:AVX)
            endif()
        endif()
        if(ALICE_AVX2)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_avx2=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:AVX2)
            endif()
        endif()
        if(ALICE_AVX512)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_avx512=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:AVX512)
            endif()
        endif()
        if(ALICE_AVX10_1)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_avx10_1=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:AVX10.1)
            endif()
        endif()
        if(ALICE_AVX10_2)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_avx10_2=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:AVX10.2)
            endif()
        endif()
        if(ALICE_APX)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_apx=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /feature:APX)
            endif()
        endif()
    elseif(ARCH_LOWER MATCHES "^(aarch64|arm64)$")
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm64=)
        if(ALICE_ARM8_1)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_1=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.1)
            endif()
        endif()
        if(ALICE_ARM8_2)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_2=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.2)
            endif()
        endif()
        if(ALICE_ARM8_3)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_3=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.3)
            endif()
        endif()
        if(ALICE_ARM8_4)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_4=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.4)
            endif()
        endif()
        if(ALICE_ARM8_5)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_5=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.5)
            endif()
        endif()
        if(ALICE_ARM8_6)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_6=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.6)
            endif()
        endif()
        if(ALICE_ARM8_7)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_7=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.7)
            endif()
        endif()
        if(ALICE_ARM8_8)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_8=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.8)
            endif()
        endif()
        if(ALICE_ARM8_9)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm8_9=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv8.9)
            endif()
        endif()
        if(ALICE_ARM9_0)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm9_0=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv9.0)
            endif()
        endif()
        if(ALICE_ARM9_1)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm9_1=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv9.1)
            endif()
        endif()
        if(ALICE_ARM9_2)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm9_2=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv9.2)
            endif()
        endif()
        if(ALICE_ARM9_3)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm9_3=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv9.3)
            endif()
        endif()
        if(ALICE_ARM9_4)
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_arm9_4=)
            if(MSVC)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /arch:armv9.4)
            endif()
        endif()
    endif()
    target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_major=0 alice_middle=0 alice_minor=1)
    target_include_directories(${ALICE_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Source")
    if(MSVC)
        target_compile_options(${ALICE_TEST_NAME} PRIVATE /std:c++latest)
        if(ALICE_STACK)
            target_link_options(${ALICE_TEST_NAME} PRIVATE "/F ${ALICE_STACK_ALIGNED}")
        endif()
    else()
        target_compile_features(${ALICE_TEST_NAME} PRIVATE cxx_std_26)
    endif()
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
        target_compile_options(${ALICE_TEST_NAME} PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions -fabi-version=21 -faligned-new -fchar8_t -fconcepts -fcontracts -fcontracts-client-check=all -fcontracts-definition-check=off -fcoroutines -ffold-simple-inlines -fno-gnu-keywords -fnew-inheriting-ctors -fnew-ttp-matching -frange-for-ext-temps -freflection -fsized-deallocation -fstrict-enums -fstrong-eval-order -Wabi-tag -Wcomma-subscript -Wdangling-reference -Wdelete-non-virtual-dtor -Wdeprecated-copy -Wdeprecated-copy-dtor -Wdeprecated-literal-operator -Wdeprecated-variadic-comma-omission -Winvalid-constexpr -Wnoexcept-type -Wclass-memaccess -Wnon-virtual-dtor -Wregister -Wreorder -Wrange-loop-construct -Wredundant-tags -Wsfinae-incomplete=2 -Wstrict-null-sentinel)
        if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE _UNICODE=)
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -municode)
        endif()
    elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        target_compile_options(${ALICE_TEST_NAME} PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions -Wno-dollar-in-identifier-extension)
        if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
            target_compile_definitions(${ALICE_TEST_NAME} PRIVATE _UNICODE=)
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -municode)
        endif()
    else()
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE _HAS_EXCEPTIONS=0)
        if(ALICE_SAFE_BUFFERS)
            target_compile_options(${ALICE_TEST_NAME} PRIVATE /GS)
        endif()
        if(ALICE_SAFE_CONTROL_FLOW)
            target_compile_options(${ALICE_TEST_NAME} PRIVATE /guard:cf)
            target_link_options(${ALICE_TEST_NAME} PRIVATE /guard:cf /CETCOMPAT)
        endif()
        if(ALICE_SAFE_STACK)
            target_compile_options(${ALICE_TEST_NAME} PRIVATE /presetPadding)
        endif()
        if(ALICE_SPECTRE)
            target_compile_options(${ALICE_TEST_NAME} PRIVATE /Qspectre /Qspectre-load /Qspectre-load-cf)
        endif()
        target_compile_options(${ALICE_TEST_NAME} PRIVATE /nologo /bigobj /utf-8 /Zc:preprocessor /W4 /WX /permissive- /GR- /EHs-c- /GA /GF /Gw /Gy /jumptablerdata /options:strict /MP /volatile:iso /Zc:__cplusplus /Zc:enumTypes /Zc:templateScope /Zc:throwingNew)
        target_link_options(${ALICE_TEST_NAME} PRIVATE /NOLOGO /OPT:REF,ICF,LBR /INCREMENTAL:NO /WX)
    endif()
    if(ALICE_MULTI)
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:alice_debug=>)
        if(MSVC)
            if(ALICE_SAFE_STACK)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:/RTC1>)
            endif()
            target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:/Zi /Od /MTd /Zf /ZH:SHA512> $<$<CONFIG:Release>:/GL /Ox /MT /Oi>)
            target_link_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:/DEBUG> $<$<CONFIG:Release>:/LTCG>)
        else()
            target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-O0> $<$<CONFIG:Release>:-O3>)
            target_link_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-g>)
            if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
                target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-g3 -ggdb3 -gdwarf-5> $<$<CONFIG:Release>:-flto=auto>)
                target_link_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=auto>)
            else()
                target_compile_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-g> $<$<CONFIG:Release>:-flto=full>)
                target_link_options(${ALICE_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=full>)
            endif()
        endif()
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_definitions(${ALICE_TEST_NAME} PRIVATE alice_debug=)
        if(MSVC)
            if(ALICE_SAFE_STACK)
                target_compile_options(${ALICE_TEST_NAME} PRIVATE /RTC1)
            endif()
            target_compile_options(${ALICE_TEST_NAME} PRIVATE /Zi /Od /MTd /Zf /ZH:SHA512)
            target_link_options(${ALICE_TEST_NAME} PRIVATE /DEBUG)
        else()
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -O0)
            target_link_options(${ALICE_TEST_NAME} PRIVATE -g)
            if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
                target_compile_options(${ALICE_TEST_NAME} PRIVATE -g3 -ggdb3 -gdwarf-5)
            else()
                target_compile_options(${ALICE_TEST_NAME} PRIVATE -g)
            endif()
        endif()
    elseif(MSVC)
        target_compile_options(${ALICE_TEST_NAME} PRIVATE /GL /Ox /MT /Oi)
        target_link_options(${ALICE_TEST_NAME} PRIVATE /LTCG)
    else()
        target_compile_options(${ALICE_TEST_NAME} PRIVATE -O3)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -flto=auto)
            target_link_options(${ALICE_TEST_NAME} PRIVATE -flto=auto)
        else()
            target_compile_options(${ALICE_TEST_NAME} PRIVATE -flto=full)
            target_link_options(${ALICE_TEST_NAME} PRIVATE -flto=full)
        endif()
    endif()
    add_test(NAME ${ALICE_TEST_FILE} COMMAND ${ALICE_TEST_NAME})
    if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
        if(ALICE_CI)
            set_tests_properties(${ALICE_TEST_FILE} PROPERTIES ENVIRONMENT "VK_LAYER_PATH=${ALICE_VK_LAYER_PATH};WAYLAND_DISPLAY=wayland-0")
        else()
            set_tests_properties(${ALICE_TEST_FILE} PROPERTIES ENVIRONMENT "VK_LAYER_PATH=${ALICE_VK_LAYER_PATH}")
        endif()
    endif()
    list(APPEND ALICE_TESTING ${ALICE_TEST_NAME})
endforeach()
add_custom_target(clean_app ${ALICE_CLEAN})
add_custom_target(ALICE_RUN_TESTS ALL COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_dependencies(ALICE_RUN_TESTS ${ALICE_TESTING})
execute_process(COMMAND ${CMAKE_COMMAND} -E environment OUTPUT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Environment")